turn off diagnosis

--- a/02_Part_B_Design_Library/01_Observational_Descriptive/08_Meta_analysis.Rmd
+++ b/02_Part_B_Design_Library/01_Observational_Descriptive/08_Meta_analysis.Rmd
@@ -72,7 +72,7 @@ meta_study_design <-
   declare_estimand(mu = .25, tau_sq = .1^2) +
   declare_estimator(handler = rma_tidy)
 
-diagnose_design(design = meta_study_design, sims = 100, bootstrap_sims = FALSE)
+#diagnose_design(design = meta_study_design, sims = 100, bootstrap_sims = FALSE)
 ```
 
 
