--- a/_outline/outline.rmd
+++ b/_outline/outline.rmd
@@ -26,8 +26,8 @@ This section is only in words, not in code (until the software primer)
 - research questions often begin with a bivariate "idea" (an x and a y for causal qs, or how does y vary according to x for descriptive)
 
 ## Kinds of research projects that there are [AC] [JC]
-- Do you want to answer a causal or descriptive question?
-- Typology of questions: COE vs EOC for causal; questions about one of the modes of the distribution of a variable;
+- Do you want to answer a causal or descriptive question? [MH]
+- Typology of questions: COE vs EOC for causal; questions about one of the modes of the distribution of a variable; [MH]
 - What is your inquiry if you don’t know the question in advance? (Discovery)
 
 
@@ -38,7 +38,7 @@ This section is only in words, not in code (until the software primer)
 
 ## Specifying the model [JC]
 - Introduce DAGs and potential outcomes
-- What is your DAG? How do you write a DAG? What must be in it? What will be missing from it (heterogeneity!)?
+- What is your DAG? How do you write a DAG? What must be in it? What will be missing from it (heterogeneity!)? [MH]
 - What parts of background variables must be specified, and how can you specify them (existing data, substantive bounds on variables)
 - Isn't defining the effect size for potential outcomes begging the question?
 - Pilot studies
@@ -48,9 +48,9 @@ This section is only in words, not in code (until the software primer)
 - Measurements are potential outcomes
 
 ## Defining the Inquiry
-- When would a null finding be interesting?
-- Is the answer defined? (include not only missingness, but ATE for categorical outcomes)
-- What is the set of units which you want to learn the answer about? (since we can't learn about an individual unit)
+- When would a null finding be interesting? [MH]
+- Is the answer defined? (include not only missingness, but ATE for categorical outcomes) [MH]
+- What is the set of units which you want to learn the answer about? (since we can't learn about an individual unit) [MH]
 - Know what ATE averages over
 - Know what is local in a LATE
 - Know when SATEs are informative for PATEs
@@ -96,7 +96,7 @@ This section is only in words, not in code (until the software primer)
 
 - Conduct subject to constraints: budget, ethical, logistical
 
-## Redesign 
+## Redesign [MH]
 
 - When the diagnosis says the design is weak, improve it!
 - Resist the urge to change M and I to suit a diagnosis -- focus on D and A
@@ -118,13 +118,13 @@ This section is only in words, not in code (until the software primer)
 - Audit experiments [AC]
 - Experiments for sensitive questions [GB]
 - Conjoint experiments [AC]
-- Experimental games
+- Experimental games [MH]
 	
 ## Experimental designs for causal inference
-- Multiarm designs
-- Experiments with blocks and clusters
+- Multiarm designs [MH]
+- Experiments with blocks and clusters [MH]
 - Experiments where blocks and clusters are also sampled from populations of blocks/clusters [JC]
-- Factorial designs
+- Factorial designs [MH]
 - Encouragement designs [JC]
 - Stepped-wedge designs [JC]
 - Crossover designs 
@@ -140,14 +140,14 @@ This section is only in words, not in code (until the software primer)
 - Regression discontinuity designs [JC]
 - Synthetic control [GB]
 - Process tracing [JC]
-- Nested designs
-- Qualitative comparative analysis
+- Nested designs [MH]
+- Qualitative comparative analysis [MH]
 - Cross national time series
 
 # Part E: Design Criticism
 
-- Peers: Better scholarly critique
-- Funders: Evaluating and supporting research
+- Peers: Better scholarly critique [MH]
+- Funders: Evaluating and supporting research [MH]
 
 
 # IDEAs we don't know if to cut or integrate or what
